feat: add .gitignore file and add logo.svg

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <title>CV - Aleksandr Dmitriev</title>
 </head>
 <body>
-
+    <header class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <a href="#" class="header__logo-link">
+                        <img src="assets/img/logo.svg" alt="Logo image" class="header__logo">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
