feat: add userpic and general css property

--- a/index.html
+++ b/index.html
@@ -1,25 +1,110 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>CV - Aleksandr Dmitriev</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>CV - Aleksandr Dmitriev</title>
 </head>
+
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <a href="#" class="header__logo-link">
-                        <img src="assets/img/logo.svg" alt="Logo image" class="header__logo">
-                    </a>
-                </div>
-            </div>
+  <header class="header">
+    <div class="container header__container">
+      <div class="row">
+        <div class="col-lg-12 header__content flex">
+          <a href="#" class="header__logo-link">
+            <img src="assets/img/logo.svg" alt="Logo image" class="header__logo">
+          </a>
+          <nav class="header__nav nav">
+            <ul class="nav__list  list-reset flex">
+              <li class="nav__item">
+                <a href="#section-contact" class="nav__link">Contact</a>
+              </li>
+              <li class="nav__item">
+                <a href="#section-about" class="nav__link">About me</a>
+              </li>
+              <li class="nav__item">
+                <a href="#section-skills" class="nav__link">Skills</a>
+              </li>
+              <li class="nav__item">
+                <a href="#section-github" class="nav__link">My GitHub</a>
+              </li>
+              <li class="nav__item">
+                <a href="#section-education" class="nav__link">Education</a>
+              </li>
+              <li class="nav__item">
+                <a href="#section-courses" class="nav__link">Courses</a>
+              </li>
+              <li class="nav__item">
+                <a href="#section-languages" class="nav__link">Languages</a>
+              </li>
+            </ul>
+          </nav>
         </div>
-    </header>
+      </div>
+    </div>
+  </header>
+  <main class="main">
+    <section class="section-hero">
+      <div class="container section-hero__container">
+        <div class="row">
+          <div class="col-lg-4">
+            <img src="assets/img/userpic.jpg" alt="avatar" class="section-hero__img">
+          </div>
+          <div class="col-lg-8">
+            <h1 class="section-hero__title">Aleksandr Dmitriev</h1>
+            <span class="section-hero__descr">Junior Frontend Developer</span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-contact" id="section-contact">
+      <div class="container section-contact__container">
+        <div class="row">
+          <div class="col-lg-4">
+            <h2 class="section-contact__title">Contact</h2>
+            <ul class="section-contact__list list-reset">
+              <li class="section-contact__item">
+                <span class="section-contact__descr">phone:</span>
+                <a href="tel:+79672393456" class="section-contact__link">+7 967 239 3456</a>
+              </li>
+              <li class="section-contact__item">
+                <span class="section-contact__descr">e-mails:</span>
+                <a href="mailto:dmitan@bk.ru" class="section-contact__link">dmitan@bk.ru</a>
+              </li>
+              <li class="section-contact__item">
+                <span class="section-contact__descr">telegram:</span>
+                <a href="#" class="section-contact__link">@Heinz_est1869</a>
+              </li>
+              <li class="section-contact__item">
+                <span class="section-contact__descr">Discord:</span>
+                <a href="#" class="section-contact__link">DmitaN#5034</a>
+              </li>
+              <li class="section-contact__item">
+                <a href="https://www.linkedin.com/in/aleksandr-dmitriev-901a161aa/" class="section-contact__link">LinkedIn</a>
+              </li>
+              <li class="section-contact__item">
+
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-about" id="section-about">
+      <div class="container section-about__container">
+        <div class="row">
+          <div class="col-lg-4">
+            <h2 class="section-about__title">About</h2>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
+
 </html>
