feat: update index.html: section-hero and add some general classes in style.css

--- a/index.html
+++ b/index.html
@@ -51,24 +51,24 @@
     </div>
   </header>
   <main class="main">
-    <section class="section-hero">
+    <section class="section-hero section-reset">
       <div class="container section-hero__container">
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-4 section-hero__left flex">
             <img src="assets/img/userpic.jpg" alt="avatar" class="section-hero__img">
           </div>
-          <div class="col-lg-8">
-            <h1 class="section-hero__title">Aleksandr Dmitriev</h1>
+          <div class="col-lg-8 section-hero__right flex">
+            <h1 class="section-hero__title title">Aleksandr Dmitriev</h1>
             <span class="section-hero__descr">Junior Frontend Developer</span>
           </div>
         </div>
       </div>
     </section>
-    <section class="section-contact" id="section-contact">
+    <section class="section-contact section-reset" id="section-contact">
       <div class="container section-contact__container">
         <div class="row">
           <div class="col-lg-4">
-            <h2 class="section-contact__title">Contact</h2>
+            <h2 class="section-contact__title title">Contact</h2>
             <ul class="section-contact__list list-reset">
               <li class="section-contact__item">
                 <span class="section-contact__descr">phone:</span>
@@ -87,6 +87,7 @@
                 <a href="#" class="section-contact__link">DmitaN#5034</a>
               </li>
               <li class="section-contact__item">
+                <span class="section-contact__descr">Link to:</span>
                 <a href="https://www.linkedin.com/in/aleksandr-dmitriev-901a161aa/"
                   class="section-contact__link">LinkedIn</a>
               </li>
@@ -95,15 +96,17 @@
         </div>
       </div>
     </section>
-    <section class="section-about" id="section-about">
+    <section class="section-about section-reset" id="section-about">
       <div class="container section-about__container">
         <div class="row">
           <div class="col-lg-4">
-            <h2 class="section-about__title">About me</h2>
+            <h2 class="section-about__title title">About me</h2>
             <p class="section-about__descr">
-              I&nbsp;have been in&nbsp;IT for more than 12&nbsp;years. I&nbsp;have experience in&nbsp;developing desktop
+              I&nbsp;have been in&nbsp;IT for more than 12&nbsp;years. I&nbsp;have experience in&nbsp;developing
+              desktop
               applications and working with databases. I&nbsp;am actively studying frontend development now,
-              because&nbsp;I see a&nbsp;great future in&nbsp;it. And also the result is&nbsp;visible immediately, which
+              because&nbsp;I see a&nbsp;great future in&nbsp;it. And also the result is&nbsp;visible immediately,
+              which
               motivates you to&nbsp;continue learning. I&nbsp;want to&nbsp;gain experience in&nbsp;development for
               European customers and companies.
             </p>
@@ -116,11 +119,11 @@
         </div>
       </div>
     </section>
-    <section class="section-skills" id="section-skills">
+    <section class="section-skills section-reset" id="section-skills">
       <div class="container section-skills__container">
         <div class="row">
           <div class="col-lg-4">
-            <h2 class="section-skills__title">My Skills</h2>
+            <h2 class="section-skills__title title">My Skills</h2>
             <ul class="section-skills__list list-reset">
               <li class="section-skills__item">
                 <span class="section-skills__item-descr">HTML</span>
@@ -148,11 +151,11 @@
         </div>
       </div>
     </section>
-    <section class="section-code">
+    <section class="section-code section-reset" id="section-code">
       <div class="container section-code__container">
         <div class="row">
           <div class="col-lg-7">
-            <h2 class="section-code__title">My code</h2>
+            <h2 class="section-code__title title">My code</h2>
             <pre class="section-code__example">
               <code class="section-code__javascript hljs language-javascript">
                 burger.addEventListener('click',
@@ -168,28 +171,29 @@
         </div>
       </div>
     </section>
-    <section class="section-education" id="section-education">
+    <section class="section-education section-reset" id="section-education">
       <div class="container section-education__container">
         <div class="row">
           <div class="col-lg-4">
-            <h2 class="section-education__title">Education</h2>
+            <h2 class="section-education__title title">Education</h2>
             <p class="section-education__descr">
               I&nbsp;graduated from the Ural State Mining University in&nbsp;Yekaterinburg with a&nbsp;degree
               in&nbsp;Automated Information Processing and Management Systems in&nbsp;2010.
             </p>
             <p class="section-education__descr">
-              I&nbsp;am continuing my&nbsp;training on&nbsp;the Skillbox platform as&nbsp;a&nbsp;frontend developer now.
+              I&nbsp;am continuing my&nbsp;training on&nbsp;the Skillbox platform as&nbsp;a&nbsp;frontend developer
+              now.
               And I&rsquo;m also starting to&nbsp;study at&nbsp;RS&nbsp;School in&nbsp;the same direction
             </p>
           </div>
         </div>
       </div>
     </section>
-    <section class="section-languages" id="section-languages">
+    <section class="section-languages section-reset" id="section-languages">
       <div class="container section-languages__container">
         <div class="row">
           <div class="col-lg-4">
-            <h2 class="section-languages__title">Languages</h2>
+            <h2 class="section-languages__title title">Languages</h2>
             <ul class="section-languages__list list-reset">
               <li class="section-languages__item">
                 <strong class="section-languages__item-title">English</strong>
@@ -209,6 +213,7 @@
     <div class="container footer__container flex">
       <div class="row">
         <div class="col-lg-12">
+          <span class="footer__year">© 2022</span>
           <a href="https://github.com/DmitaN/" target="_blank" class="footer__link">My GitHub</a>
           <a href="https://rs.school/js/" target="_blank" class="footer__link">
             <img src="assets/img/rs_school_js.svg" alt="footer_logo" class="footer__logo">
