feat: add icons for section-contact and update style section-contact

--- a/index.html
+++ b/index.html
@@ -67,26 +67,29 @@
     <section class="section-contact section-reset" id="section-contact">
       <div class="container section-contact__container">
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-12">
             <h2 class="section-contact__title title">Contact</h2>
-            <ul class="section-contact__list list-reset">
-              <li class="section-contact__item">
+            <ul class="section-contact__list list-reset flex">
+              <li class="section-contact__item section-contact__item--image-1">
+                <span class="section-contact__descr">Moscow, Russia</span>
+              </li>
+              <li class="section-contact__item section-contact__item--image-2">
                 <span class="section-contact__descr">phone:</span>
                 <a href="tel:+79672393456" class="section-contact__link">+7 967 239 3456</a>
               </li>
-              <li class="section-contact__item">
-                <span class="section-contact__descr">e-mails:</span>
+              <li class="section-contact__item section-contact__item--image-3">
+                <span class="section-contact__descr">e-mail:</span>
                 <a href="mailto:dmitan@bk.ru" class="section-contact__link">dmitan@bk.ru</a>
               </li>
-              <li class="section-contact__item">
+              <li class="section-contact__item section-contact__item--image-4">
                 <span class="section-contact__descr">telegram:</span>
                 <a href="#" class="section-contact__link">@Heinz_est1869</a>
               </li>
-              <li class="section-contact__item">
+              <li class="section-contact__item section-contact__item--image-5">
                 <span class="section-contact__descr">Discord:</span>
                 <a href="#" class="section-contact__link">DmitaN#5034</a>
               </li>
-              <li class="section-contact__item">
+              <li class="section-contact__item section-contact__item--image-6">
                 <span class="section-contact__descr">Link to:</span>
                 <a href="https://www.linkedin.com/in/aleksandr-dmitriev-901a161aa/"
                   class="section-contact__link">LinkedIn</a>
