feat: add new section-project and update style.css

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="#section-skills" class="nav__link">Skills</a>
               </li>
               <li class="nav__item">
-                <a href="#section-github" class="nav__link">My GitHub</a>
+                <a href="#section-projects" class="nav__link">My projects</a>
               </li>
               <li class="nav__item">
                 <a href="#section-code" class="nav__link">My code</a>
@@ -154,6 +154,32 @@
         </div>
       </div>
     </section>
+    <section class="section-projects section-reset" id="section-projects">
+      <div class="container section-projects__container">
+        <div class="row">
+          <div class="col-lg-12">
+            <h2 class="section-projects__title title">My projects</h2>
+            <p class="section-projects__descr">You can see more my project on
+              <a href="https://github.com/DmitaN/" class="section-projects__link" target="_blank">Github</a>
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <ul class="section-projects__list list-reset flex col-lg-12">
+              <li class="col-lg-4 section-projects__item">
+                <strong class="section-projects__item-title">Laggona</strong>
+                <p class="section-projects__item-descr">Site for small company</p>
+                <a href="https://github.com/DmitaN/lagoona" class="section-projects__link" target="_blank">Laggona on github</a>
+              </li>
+              <li class="col-lg-4 section-projects__item">
+                <strong class="section-projects__item-title">Evklid</strong>
+                <p class="section-projects__item-descr">Site for small company</p>
+                <a href="https://github.com/DmitaN/evklid" class="section-projects__link" target="_blank">Evklid on github</a>
+              </li>
+          </ul>
+        </div>
+      </div>
+    </section>
     <section class="section-code section-reset" id="section-code">
       <div class="container section-code__container">
         <div class="row">
@@ -217,8 +243,8 @@
       <div class="row">
         <div class="col-lg-12">
           <span class="footer__year">© 2022</span>
-          <a href="https://github.com/DmitaN/" target="_blank" class="footer__link">My GitHub</a>
-          <a href="https://rs.school/js/" target="_blank" class="footer__link">
+          <a href="https://github.com/DmitaN/" class="footer__link" target="_blank">My GitHub</a>
+          <a href="https://rs.school/js/" class="footer__link" target="_blank">
             <img src="assets/img/rs_school_js.svg" alt="footer_logo" class="footer__logo">
           </a>
         </div>
