feat: add img for section-skills. update index and style files

--- a/index.html
+++ b/index.html
@@ -74,23 +74,18 @@
                 <span class="section-contact__descr">Moscow, Russia</span>
               </li>
               <li class="section-contact__item section-contact__item--image-2">
-                <span class="section-contact__descr">phone:</span>
                 <a href="tel:+79672393456" class="section-contact__link">+7 967 239 3456</a>
               </li>
               <li class="section-contact__item section-contact__item--image-3">
-                <span class="section-contact__descr">e-mail:</span>
                 <a href="mailto:dmitan@bk.ru" class="section-contact__link">dmitan@bk.ru</a>
               </li>
               <li class="section-contact__item section-contact__item--image-4">
-                <span class="section-contact__descr">telegram:</span>
                 <a href="#" class="section-contact__link">@Heinz_est1869</a>
               </li>
               <li class="section-contact__item section-contact__item--image-5">
-                <span class="section-contact__descr">Discord:</span>
                 <a href="#" class="section-contact__link">DmitaN#5034</a>
               </li>
               <li class="section-contact__item section-contact__item--image-6">
-                <span class="section-contact__descr">Link to:</span>
                 <a href="https://www.linkedin.com/in/aleksandr-dmitriev-901a161aa/"
                   class="section-contact__link">LinkedIn</a>
               </li>
@@ -102,10 +97,10 @@
     <section class="section-about section-reset" id="section-about">
       <div class="container section-about__container">
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-12">
             <h2 class="section-about__title title">About me</h2>
             <p class="section-about__descr">
-              I&nbsp;have been in&nbsp;IT for more than 12&nbsp;years. I&nbsp;have experience in&nbsp;developing
+              I&nbsp;have been in&nbsp;IT for more than 12&nbsp;years. I&nbsp;have leadership experience. I&nbsp;have experience in&nbsp;developing
               desktop
               applications and working with databases. I&nbsp;am actively studying frontend development now,
               because&nbsp;I see a&nbsp;great future in&nbsp;it. And also the result is&nbsp;visible immediately,
@@ -125,8 +120,37 @@
     <section class="section-skills section-reset" id="section-skills">
       <div class="container section-skills__container">
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-12">
             <h2 class="section-skills__title title">My Skills</h2>
+          </div>
+          <div class="col lg-6">
+            <h3 class="section-skills__subtitle section-skills__subtitle--image-1">Soft skills</h3>
+            <ul class="section-skills__list list-reset">
+              <li class="section-skills__item">
+                <span class="section-skills__item-descr">Communication</span>
+              </li>
+              <li class="section-skills__item">
+                <span class="section-skills__item-descr">Teamwork</span>
+              </li>
+              <li class="section-skills__item">
+                <span class="section-skills__item-descr">Problem-solving</span>
+              </li>
+              <li class="section-skills__item">
+                <span class="section-skills__item-descr">Time management</span>
+              </li>
+              <li class="section-skills__item">
+                <span class="section-skills__item-descr">Critical thinking</span>
+              </li>
+              <li class="section-skills__item">
+                <span class="section-skills__item-descr">Decision-making</span>
+              </li>
+              <li class="section-skills__item">
+                <span class="section-skills__item-descr">Organizational</span>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-6">
+            <h3 class="section-skills__subtitle section-skills__subtitle--image-2">Hard skills</h3>
             <ul class="section-skills__list list-reset">
               <li class="section-skills__item">
                 <span class="section-skills__item-descr">HTML</span>
