feat: add new files for section-projects. update style.css and index.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
           <div class="col-lg-12">
             <h2 class="section-about__title title">About me</h2>
             <p class="section-about__descr">
-              I&nbsp;have been in&nbsp;IT for more than 12&nbsp;years. I&nbsp;have leadership experience. I&nbsp;have experience in&nbsp;developing
+              I&nbsp;have been in&nbsp;IT for more than 12&nbsp;years. I&nbsp;have leadership experience. I&nbsp;have
+              experience in&nbsp;developing
               desktop
               applications and working with databases. I&nbsp;am actively studying frontend development now,
               because&nbsp;I see a&nbsp;great future in&nbsp;it. And also the result is&nbsp;visible immediately,
@@ -187,20 +188,22 @@
               <a href="https://github.com/DmitaN/" class="section-projects__link" target="_blank">Github</a>
             </p>
           </div>
-        </div>
-        <div class="row">
-          <ul class="section-projects__list list-reset flex col-lg-12">
-              <li class="col-lg-4 section-projects__item">
-                <strong class="section-projects__item-title">Laggona</strong>
+          <div class="col-lg-12 section-projects__content">
+            <ul class="section-projects__list list-reset flex">
+              <li class="col-lg-4 section-projects__item section-projects__item--image-1">
+                <h3 class="section-projects__item-title">Laggona</h3>
                 <p class="section-projects__item-descr">Site for small company</p>
-                <a href="https://github.com/DmitaN/lagoona" class="section-projects__link" target="_blank">Laggona on github</a>
+                <a href="https://github.com/DmitaN/lagoona" class="section-projects__link" target="_blank">Laggona on
+                  github</a>
               </li>
-              <li class="col-lg-4 section-projects__item">
-                <strong class="section-projects__item-title">Evklid</strong>
+              <li class="col-lg-4 section-projects__item section-projects__item--image-2">
+                <h3 class="section-projects__item-title">Evklid</h3>
                 <p class="section-projects__item-descr">Site for small company</p>
-                <a href="https://github.com/DmitaN/evklid" class="section-projects__link" target="_blank">Evklid on github</a>
+                <a href="https://github.com/DmitaN/evklid" class="section-projects__link" target="_blank">Evklid on
+                  github</a>
               </li>
-          </ul>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
