--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
           <div class="col-lg-12">
             <h2 class="section-skills__title title">My Skills</h2>
           </div>
-          <div class="col lg-6">
+        </div>
+        <div class="row section-skills__content">
+          <div class="col-lg-2">
             <h3 class="section-skills__subtitle section-skills__subtitle--image-1">Soft skills</h3>
             <ul class="section-skills__list list-reset">
               <li class="section-skills__item">
@@ -150,7 +152,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-2">
             <h3 class="section-skills__subtitle section-skills__subtitle--image-2">Hard skills</h3>
             <ul class="section-skills__list list-reset">
               <li class="section-skills__item">
