refactor: change link to telegram and add target option

--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
                 <a href="mailto:dmitan@bk.ru" class="section-contact__link">dmitan@bk.ru</a>
               </li>
               <li class="section-contact__item section-contact__item--image-4">
-                <a href="#" class="section-contact__link">@Heinz_est1869</a>
+                <a href="https://t.me/Heinz_est1869" class="section-contact__link" target="_blank">@Heinz_est1869</a>
               </li>
               <li class="section-contact__item section-contact__item--image-5">
-                <a href="#" class="section-contact__link">DmitaN#5034</a>
+                <a href="#" class="section-contact__link" target="_blank">DmitaN#5034</a>
               </li>
               <li class="section-contact__item section-contact__item--image-6">
                 <a href="https://www.linkedin.com/in/aleksandr-dmitriev-901a161aa/"
-                  class="section-contact__link">LinkedIn</a>
+                  class="section-contact__link" target="_blank">LinkedIn</a>
               </li>
             </ul>
           </div>
