feat: add new pictures for burger menu. add media.css. update index.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/default.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/media.css">
   <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
   <title>CV - Aleksandr Dmitriev</title>
 </head>
@@ -18,8 +19,9 @@
     <div class="container header__container">
       <div class="row">
         <div class="col-lg-12 header__content flex">
+          <button class="header__burger btn-reset" aria-label="Бергер меню"></button>
           <a href="#" class="header__logo-link">
-            <img src="assets/img/logo.svg" alt="Logo image" class="header__logo">
+            <img src="assets/img/header/logo.svg" alt="Logo image" class="header__logo">
           </a>
           <nav class="header__nav nav">
             <ul class="nav__list  list-reset flex">
@@ -126,7 +128,7 @@
           </div>
         </div>
         <div class="row section-skills__content">
-          <div class="col-lg-2">
+          <div class="col-lg-3">
             <h3 class="section-skills__subtitle section-skills__subtitle--image-1">Soft skills</h3>
             <ul class="section-skills__list list-reset">
               <li class="section-skills__item">
@@ -152,7 +154,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-3">
             <h3 class="section-skills__subtitle section-skills__subtitle--image-2">Hard skills</h3>
             <ul class="section-skills__list list-reset">
               <li class="section-skills__item">
