refastor: update some style

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
             <h2 class="section-skills__title title">My Skills</h2>
           </div>
         </div>
-        <div class="row section-skills__content">
-          <div class="col-lg-3">
+        <div class="row section-skills__content flex">
+          <div class="col-lg-3 col-md-3">
             <h3 class="section-skills__subtitle section-skills__subtitle--image-1">Soft skills</h3>
             <ul class="section-skills__list list-reset">
               <li class="section-skills__item">
@@ -154,7 +154,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-3">
             <h3 class="section-skills__subtitle section-skills__subtitle--image-2">Hard skills</h3>
             <ul class="section-skills__list list-reset">
               <li class="section-skills__item">
